--- a/Projeto-03/css/estilo.css
+++ b/Projeto-03/css/estilo.css
@@ -26,6 +26,46 @@ body {
 	padding: 10px;
 }
 
+#principal {
+	width: 920px;
+	margin:  0 auto;
+	
+
+}
+
+#postagens {
+		background: white;
+		width: 660px;
+		float: left;
+}
+
+.post {
+	padding: 20px;
+	margin-bottom: 20px;
+}
+
+#menu-lateral {
+	 background: white;
+	 width: 240px;
+	 float: right;
+}
+
+.lateral-conteudo {
+	padding: 10px;
+}
+
+
+
+
+#rodape {
+		text-align: center;
+		padding: 10px;
+		background: #ccc;
+		clear: both;
+}
+
+
+
 .vermelho {
 	color: #ab3131;
 }
@@ -39,7 +79,7 @@ a{
 	text-decoration: none;
 }
 
-#cabecalho a:link, a:visited {
+#cabecalho a:link, #cabecalho a:visited {
 	color: white;
 	padding: 5px;
 }
@@ -49,4 +89,38 @@ a{
 	background:#ab3131;
 }
 
+/* links body */
 
+#principal a:link, #principal a:visited{
+	color: #979696;
+}
+
+/* formtaçoes gerais */
+
+h1 {
+	font-size: 2.5em;
+	color: black;
+}
+
+h2 {
+	color: #979696 ;
+}
+
+h3 {
+	color: black;
+	background: #ccc;
+	padding: 10px;
+	margin: 5px;
+}
+
+.data-post {
+	font-size: 0.8em;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	border-bottom:  1px solid #f4f4f4;
+	display: block;
+}
+
+.img-post {
+	width: 600px;
+}
